unexpected profiling mismatch in c1 generated code

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P2
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • None
    • b140
    • Verified

        #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # Internal Error (/scratch/8158639/hs-comp-final/hs-comp/hotspot/src/cpu/x86/vm/macroAssembler_x86.cpp:887), pid=5093, tid=5094
        # assert(false) failed: DEBUG MESSAGE: unexpected profiling mismatch
        #
        # JRE version: Java(TM) SE Runtime Environment (9.0) (fastdebug build 9-internal+0-2016-08-17-014333.jcm.hs-comp)
        # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 9-internal+0-2016-08-17-014333.jcm.hs-comp, mixed mode, tiered, compressed oops, g1 gc, linux-amd64)
        # Core dump will be written. Default location: Core dumps may be processed with "/usr/libexec/abrt-hook-ccpp %s %c %p %u %g %t e" (or dumping to /scratch/8158639/core.5093)
        #
        # If you would like to submit a bug report, please visit:
        # http://bugreport.java.com/bugreport/crash.jsp
        #

              Assignee:
              Jamsheed C M (Inactive)
              Reporter:
              Jamsheed C M (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

                Created:
                Updated:
                Resolved: