8164508: unexpected profiling mismatch in c1 generated code

Made 8027631 first arg skip applicable to not inlined virtual callsite too.

Reviewed-by: kvn